--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
             <a href="signin.html" class="btn btn-outline-light" id="logInButton">Log In</a>
         </div>
     </div>
-    <div id="logout-button" style="display: none;">
-        <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
+    <div id="personal-account-button" style="display: block;">
+        <a href="user.html" class="btn btn-outline-light" id="personalAccountButton">Personal Account</a>
     </div>
+        <div id="logout-button" style="display: none;">
+            <a href="index.html" class="btn btn-outline-light" id="logOutButton">Log Out</a>
+        </div>
+       
 </header>
 
 
